VulnVersion/tests/vet_taxonomy_corpus/work/linux/CVE-2024-26662/step1/fix_evidence/e96fddb32931/show_summary.txt
commit e96fddb32931d007db12b1fce9b5e8e4c080401b
Author:     Srinivasan Shanmugam <srinivasan.shanmugam@amd.com>
AuthorDate: Sat Jan 27 18:34:01 2024 +0530
Commit:     Alex Deucher <alexander.deucher@amd.com>
CommitDate: Wed Feb 7 18:14:39 2024 -0500

    drm/amd/display: Fix 'panel_cntl' could be null in 'dcn21_set_backlight_level()'
    
    'panel_cntl' structure used to control the display panel could be null,
    dereferencing it could lead to a null pointer access.
    
    Fixes the below:
    drivers/gpu/drm/amd/amdgpu/../display/dc/hwss/dcn21/dcn21_hwseq.c:269 dcn21_set_backlight_level() error: we previously assumed 'panel_cntl' could be null (see line 250)
    
    Fixes: 474ac4a875ca ("drm/amd/display: Implement some asic specific abm call backs.")
    Cc: Yongqiang Sun <yongqiang.sun@amd.com>
    Cc: Anthony Koo <Anthony.Koo@amd.com>
    Cc: Rodrigo Siqueira <Rodrigo.Siqueira@amd.com>
    Cc: Aurabindo Pillai <aurabindo.pillai@amd.com>
    Signed-off-by: Srinivasan Shanmugam <srinivasan.shanmugam@amd.com>
    Reviewed-by: Anthony Koo <Anthony.Koo@amd.com>
    Signed-off-by: Alex Deucher <alexander.deucher@amd.com>

 .../drm/amd/display/dc/hwss/dcn21/dcn21_hwseq.c    | 39 +++++++++++-----------
 1 file changed, 20 insertions(+), 19 deletions(-)
